style.css
body {
	margin: 0;
	background-color: #e7e7e7;
	font-family: "Montserrat", "Avenir";
}

h1, h2, h3 {
	color: #1493ff;
	background-color: #ffffff;
	text-align: center;
	margin: 0;
	line-height: 1.5;
	padding: 15px 0;
	text-transform: uppercase;
}

h2, h3 {
	font-weight: normal;
}

h3 {
	color: #232323;
}

button {
	text-transform: uppercase;
	letter-spacing: 1px;
	transition: all .3s;
	-webkit-transition: all 0.3s;
	-moz=transition: all .3s;
	outline: none;
	font-weight: normal;
}

#submitBtn:hover {
	color: #1493ff;
	background-color: #232323;
	border: 3px solid #1493ff;
}

#submitBtn {
	height: 50px;
	width: 180px;
	margin: 25px auto;
	display: block;
	font-size: 1.1em;
	color: #232323;
	background-color: white;
	border: 3px solid #8f8f8f;
}

p {
	margin: 0 1%;
	font-size: 20px;
	color: #232323;;
	padding-top: 15px;
	text-transform: uppercase;
}

input {
	font-size: 20px;
	display: block;
	width: 100%;
	height: 35px;
	outline: none;
	padding-left: 10px;
}

#stripe {
	background-color: #87fa00;
	height: 5px;
}

.container {
	margin: 25px auto;
	max-width: 900px;
	background-color: white;
	border-radius: 1%;
	padding: 1% 1%;
}

.inputBox {
	margin: 0 10px;
	display: inline-block;
	width: 47%;
	padding-bottom: 5px;
}


.headSpan {
	margin: 10px 0 15px 0;
	width: 19%;
	display: inline-block;
	text-align: center;
	text-transform: uppercase;
	overflow: auto;
	background-color: inherit;
	color: inherit;
}

.btnsStripe {
	height: 15px;
}

.heading {
	padding-top: 15px;
}

.border {
	border-right: 3px solid #8f8f8f;
}

.content {
	border-top: 3px solid #8f8f8f;
}

.content:hover {
 	background-color: #373737;
 	color: white;
}

.contBtns {
	background-color: inherit;
	color: white;
	border: none;
}

.contBtns:hover {
	background-color: white;
	color: #232323;
}

.reimbursed {
	background-color: #ddd;
}

.reimb {
	padding-top: 15px;
}

.new {
	color: #1493ff;
	margin: 3px; 
	display: block;
}

@media (max-width: 750px) {
	.inputBox {
		margin: 0 auto;
		display: block;
		width: 94%;
	}

	input {
		font-size: 20px;
		display: block;
		width: 100%;
		margin: 0 auto;
		height: 35px;
		outline: none;
	}

	div .heading {
		display: none;
	}

	.headSpan {
		display: block;
		margin: 0 auto;
	}
}

